--- a/css/styles.css
+++ b/css/styles.css
@@ -250,6 +250,22 @@ background-size: cover;
     color: #fff;
     font-family: 'poppins', sans-serif;
     margin: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+}
+
+.smallimg {
+    min-width: 100%;
+    height: 15vh;
+    object-fit:cover;
+}
+
+.smallimg-exc-1 {
+    position: relative;
+    bottom: 8.5rem;
 }
 
 .card-title {
@@ -268,4 +284,7 @@ background-size: cover;
 
 .card-body {
     text-align: center;
+    display: flex;
+    flex-direction:column;
+    justify-content: end;
 }
